[package]
name = "bitcase-rust"
version = "0.1.0"
authors = ["CJ42 <CJ42@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wallet-gen = "0.4.1"
bitcoin = { version= "0.23", features=["use-serde"]}
rand = "0.7"
rust-crypto = "0.2"
serde = "1"
serde_derive = "1"

[dev-dependencies]
bitcoin = { version= "0.23", features=["use-serde", "bitcoinconsensus"]}
serde_json="1"
hex = "0.3"